2033 change fieldset to div

--- a/assets/templates/partials/data-filters/keywords-filter.tmpl
+++ b/assets/templates/partials/data-filters/keywords-filter.tmpl
@@ -1,6 +1,11 @@
 {{ $lang := .Language }}
 
-<details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
+<details
+    class="ons-collapsible ons-js-collapsible ons-collapsible--accordion"
+    data-group="accordion"
+    data-btn-close="Hide this"
+    data-open="true"
+>
     <summary class="ons-collapsible__heading ons-js-collapsible-heading">
         <h2 class="ons-collapsible__title">
             <legend class="block">
@@ -11,11 +16,11 @@
             {{ template "icons/chevron-right" }}
         </span>
     </summary>
-    <fieldset class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
-            <div class="tiles__item tiles__item--nav-type flush-col print--hide">
-                <div class="tiles__content tiles__content--nav content-type-filter">
-                    {{ template "partials/compact-search" .Data.KeywordFilter }}
-                </div>
+    <div class="ons-collapsible__content ons-js-details-content ons-u-mb-s">
+        <div class="tiles__item tiles__item--nav-type flush-col print--hide">
+            <div class="tiles__content tiles__content--nav content-type-filter">
+                {{ template "partials/compact-search" .Data.KeywordFilter }}
             </div>
-    </fieldset>
+        </div>
+    </div>
 </details>
