2033 change duplicate id

--- a/assets/templates/partials/archived-release-message.tmpl
+++ b/assets/templates/partials/archived-release-message.tmpl
@@ -1,6 +1,6 @@
 {{ $lang := .Language }}
 
-<div id="accordion" class="ons-accordion">
+<div id="earlier-release-accordion" class="ons-accordion">
     <form id="filterForm" method="get" class="js-auto-submit__form">
             <details class="ons-collapsible ons-js-collapsible ons-collapsible--accordion" data-group="accordion" data-btn-close="Hide this" data-open="true">
                 <summary class="ons-collapsible__heading ons-js-collapsible-heading">
