Update localization and add apply filters button

--- a/assets/templates/time-series-tool.tmpl
+++ b/assets/templates/time-series-tool.tmpl
@@ -22,9 +22,15 @@
             <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
           </div>
           
-          <div class="search__filter__content">
+          <div class="search__filter__content ons-u-bb">
             {{ template "partials/data-aggregation-filters" . }}
           </div>
+          <button
+              type="submit"
+              class="ons-btn ons-u-mt-l ons-u-mb-l text-wrap"
+              >
+              <span class="ons-btn__inner">{{ localise "ApplyFilters" .Language 1 }}</span>
+          </button>
           <div class="search__filter__content hide--sm">
             {{ template "partials/archived-release-message" . }}
           </div>
