add aria-live attributes to search and data agrregation results

--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -44,7 +44,7 @@
         </section>
       </div>
 
-      <div class="ons-grid__col ons-col-8@m">
+      <div class="ons-grid__col ons-col-8@m" aria-live="polite">
         <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang  1 }}">
           <div class="search__count">
             {{ template "partials/count" . }}
