--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -5,7 +5,7 @@
     <div class="ons-grid__col ons-col-12@m">
       <section class="search__summary">
         <h1 class="ons-u-fs-xxxl">
-          {{- localise .Title.LocaliseKeyName $lang 1 }}
+          {{- localise .Title.LocaliseKeyName $lang 1 }}{{ if .Data.Topic }} related to {{ .Data.Topic -}}{{ end }}
         </h1>
       </section>
     </div>
