--- a/assets/templates/partials/time-series-selection.tmpl
+++ b/assets/templates/partials/time-series-selection.tmpl
@@ -2,41 +2,55 @@
 
 <div class="d-flex">
     <button id="timeseries__basket" type="button" class="ons-btn ons-btn--secondary timeseries__basket ml-auto margin-right-sm--1 margin-right-md--1">
-        <span class="ons-btn__inner"><span class="ons-btn__text">{{ localise "Selection" $lang 1 }} (<span id="timeseries__count">0</span>)</span>
+        <span class="ons-btn__inner">
+            <span class="ons-btn__text">{{ localise "Selection" $lang 1 }} (<span id="timeseries__count">0</span>)</span>
         </span>
-      </button>
+    </button>
 </div>
-<div id="timeseriesListContainer" class="hidden timeseries__list-container ons-card">
-    <div class="timeseries__remember">
+<div id="timeseriesListContainer" class="hidden timeseries__list-container ons-modal">
+    <div class="timeseries__remember timeseries__inner">
         <span class="ons-checkbox ons-checkbox--no-border">
             <input type="checkbox" id="remember-selection" class="ons-checkbox__input ons-js-checkbox"
             aria-label="{{ localise "RememberSelection" $lang 1 }}">
             <label class="ons-checkbox__label" for="remember-selection">{{ localise "RememberSelection" $lang 1 }}</label>
         </span>
     </div>
-    <div class="timeseries__list--exit" aria-label="{{ localise "CloseTimeSeriesModal" $lang 1 }}" tabindex="0">✕</div>
-    <ul class="timeseries__list list--neutral margin-top-md--0">
-    </ul>
-    <div class="timeseries__download">
-        <p class="flush" id="timeseries__download-label">
-            {{ localise "DownloadSelectedTimeSeries" $lang 1 }}
-        </p>
+    <div class="timeseries__list--exit" aria-label="{{ localise "CloseTimeSeriesModal" $lang 1 }}" tabindex="0"><strong>✕</strong></div>
+    <div class="timeseries__inner timeseries__download">
+        <h3>{{ localise "TimeseriesBasketTitle" $lang 1 }}</h3>
+        <ul class="timeseries__list list--neutral margin-top-md--0">
+        </ul>
+        <h4 id="timeseries__download-label">
+            {{- localise "DownloadSelectedTimeSeries" $lang 1 -}}
+        </h4>
         <form id="xls-form" method="post" action="/export" class="inline print--hide">
             <button type="submit" title="Download XLS" aria-labelledby="timeseries__download-label"
-                class="btn btn--primary download-analytics">
-                {{ localise "DownloadFile" $lang 1 ".xls" }}
+                class="ons-btn ons-btn--secondary ons-btn--small ons-btn--download download-analytics">
+                <span class="ons-btn__inner">
+                    <svg class="ons-svg-icon ons-u-mr-xs" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg" focusable="false" fill="currentColor">
+                        <path d="M5.6 9a.48.48 0 0 0 .7 0l3-3.2a.48.48 0 0 0 0-.7C9.3 5 9.2 5 9 5H7.5V.5A.47.47 0 0 0 7 0H5a.47.47 0 0 0-.5.5V5H3a.47.47 0 0 0-.5.5.37.37 0 0 0 .1.3Z" />
+                        <path d="M11.5 9H11a.47.47 0 0 0-.5.5v1h-9v-1A.47.47 0 0 0 1 9H.5a.47.47 0 0 0-.5.5v2a.47.47 0 0 0 .5.5h11a.47.47 0 0 0 .5-.5v-2a.47.47 0 0 0-.5-.5Z" />
+                    </svg>
+                    <span class="ons-btn__text">{{ localise "DownloadFile" $lang 1 ".xls" }}</span>
+                </span>
             </button>
             <input type="hidden" name="format" value="xls">
         </form>
         <form id="csv-form" method="post" action="/export" class="inline print--hide">
             <button type="submit" title="Download CSV" aria-labelledby="timeseries__download-label"
-                class="btn btn--primary download-analytics">
-                {{ localise "DownloadFile" $lang 1 ".csv" }}
+                class="ons-btn ons-btn--secondary ons-btn--small ons-btn--download download-analytics">
+                <span class="ons-btn__inner">
+                    <svg class="ons-svg-icon ons-u-mr-xs" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg" focusable="false" fill="currentColor">
+                        <path d="M5.6 9a.48.48 0 0 0 .7 0l3-3.2a.48.48 0 0 0 0-.7C9.3 5 9.2 5 9 5H7.5V.5A.47.47 0 0 0 7 0H5a.47.47 0 0 0-.5.5V5H3a.47.47 0 0 0-.5.5.37.37 0 0 0 .1.3Z" />
+                        <path d="M11.5 9H11a.47.47 0 0 0-.5.5v1h-9v-1A.47.47 0 0 0 1 9H.5a.47.47 0 0 0-.5.5v2a.47.47 0 0 0 .5.5h11a.47.47 0 0 0 .5-.5v-2a.47.47 0 0 0-.5-.5Z" />
+                    </svg>
+                    <span class="ons-btn__text">{{ localise "DownloadFile" $lang 1 ".csv" }}</span>
+                </span>
             </button>
             <input type="hidden" name="format" value="csv">
         </form>
     </div>
-    <div class="timeseries__empty margin-top-sm--4 margin-top-md--4 margin-left-sm--2 margin-left-md--2 margin-right-sm--2 margin-right-md--2">
+    <div class="timeseries__empty timeseries__inner">
         <h2>{{ localise "NoTimeSeriesSelected" $lang 1 }}</h2>
         <p>{{ localise "CheckTimeseries" $lang 1 }}</p>
     </div>
