Refactor out legacy utility class

--- a/assets/templates/partials/time-series-selection.tmpl
+++ b/assets/templates/partials/time-series-selection.tmpl
@@ -18,7 +18,7 @@
     <div class="timeseries__list--exit" aria-label="{{ localise "CloseTimeSeriesModal" $lang 1 }}" tabindex="0"><strong>✕</strong></div>
     <div class="timeseries__inner timeseries__download">
         <h3>{{ localise "TimeseriesBasketTitle" $lang 1 }}</h3>
-        <ul class="timeseries__list list--neutral margin-top-md--0">
+        <ul class="timeseries__list list--neutral ons-u-mt-no">
         </ul>
         <h4 id="timeseries__download-label">
             {{- localise "DownloadSelectedTimeSeries" $lang 1 -}}
