--- a/assets/templates/partials/rss-feed.tmpl
+++ b/assets/templates/partials/rss-feed.tmpl
@@ -1,7 +1,7 @@
 {{if .RSSLink}}
 <div>
-    <ul class="ons-list ons-list--bare ons-list--icons ons-list--inline@m ons-u-flex-ai-b">
-        <li class="ons-list__item" style="align-items: center;">
+    <ul class="ons-list ons-list--bare ons-list--icons ons-list--inline@m ons-u-flex-ai-b ons-list--social">
+        <li class="ons-list__item">
             <span class="ons-list__prefix ons-u-mr-xxs" aria-hidden="true">
                 <img
                 class="ons-svg-icon ons-u-d-b"
