--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -17,7 +17,7 @@
         {{- localise "SortByLabel" .Language 1 -}}
       </label>
       <select
-        id="select-calendar-item-order"
+        id="sort"
         name="sort"
         class="ons-input ons-input--select ons-u-wa--@xxs ons-u-mr-s"
       >
