Update sort label ID

--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -12,7 +12,7 @@
     <div class="ons-field--inline">
       <label
         class="ons-label"
-        for="select-calendar-item-order"
+        for="sort"
       >
         {{- localise "SortByLabel" .Language 1 -}}
       </label>
