Fix alt attribute

--- a/assets/templates/partials/rss-feed.tmpl
+++ b/assets/templates/partials/rss-feed.tmpl
@@ -3,8 +3,8 @@
         <li class="ons-list__item">
             <span class="ons-list__prefix ons-u-mr-xxs" aria-hidden="true">
                 <img class="ons-svg-icon ons-u-d-b"
-                    src="https://cdn.ons.gov.uk/assets/images/icon-library/rss/rss-feed_small.svg" alt={{
-                    localise "SubscriptionLinkRSSIcon" .Language 1 }}>
+                    src="https://cdn.ons.gov.uk/assets/images/icon-library/rss/rss-feed_small.svg" alt="{{
+                    localise "SubscriptionLinkRSSIcon" .Language 1 }}">
             </span>
             <a href="{{.RSSLink}}" class="ons-list__link ons-u-td-no ons-u-mr-no">
                 {{- localise "SubscriptionLinkRSS" .Language 1 -}}
