Fix sort listeners

--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -19,7 +19,7 @@
       <select
         id="sort"
         name="sort"
-        class="ons-input ons-input--select ons-u-wa--@xxs ons-u-mr-s"
+        class="ons-input ons-input--select ons-u-wa--@xxs ons-u-mr-s ons-input--sort-select"
       >
         {{ $sortQuery := .Data.Sort.Query }}
         {{ range $sort := .Data.Sort.Options }}
