--- a/assets/templates/partials/rss-feed.tmpl
+++ b/assets/templates/partials/rss-feed.tmpl
@@ -1,4 +1,4 @@
-<div>
+<div class="search__rss-link">
     <ul class="ons-list ons-list--bare ons-list--icons ons-list--inline@m ons-u-flex-ai-b ons-list--social">
         <li class="ons-list__item">
             <span class="ons-list__prefix ons-u-mr-xxs" aria-hidden="true">
