Update design system version

--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -1,6 +1,6 @@
 {{ $lang := .Language }}
 
-<div class="ons-container search__container">
+<div class="ons-container search__container" id="search__container">
   <div class="ons-grid">
     <div class="ons-grid__col ons-col-12@m">
       {{ if gt (len .Error.ErrorItems) 0 }}
