--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -18,29 +18,44 @@
       novalidate
     >
       <div class="ons-grid__col ons-col-4@m">
-        <section class="search__filter" role="contentinfo" aria-label="{{ localise "SearchFiltering" $lang 4 }}" id="search-filter">
+        <section
+          class="search__filter"
+          role="contentinfo"
+          aria-label="{{ localise "SearchFiltering" $lang 4 }}"
+          id="search-filter"
+        >
           <div class="search__filter__heading">
             <h3 class="font-size--18">
               {{ localise "Filter" $lang 4 }} {{ localise .Data.TermLocalKey $lang 4 }}
             </h3>
-            <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
+            <a
+              href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}"
+              id="clear-search"
+              class="float-right font-size--18"
+            >{{ localise "ClearAll" $lang 1 }}</a>
           </div>
-          <div class="search__filter__content">
+          <div class="search__filter__content ons-u-bb">
             {{ template "partials/data-aggregation-filters" . }}
           </div>
           <button
             type="submit"
             class="ons-btn ons-u-mt-l ons-u-mb-l text-wrap"
-            >
+          >
             <span class="ons-btn__inner">{{ localise "ApplyFilters" .Language 1 }}</span>
           </button>
-          <div class="search__filter__content hide--sm">
+          <div class="search__filter__content hide--sm ons-u-mt-l ons-u-mr-s">
             {{ template "partials/archived-release-message" . }}
           </div>
         </section>
       </div>
-      <div class="ons-grid__col ons-col-8@m" aria-live="polite">
-        <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang 1 }}">
+      <div
+        class="ons-grid__col ons-col-8@m"
+        aria-live="polite"
+      >
+        <section
+          role="contentinfo"
+          aria-label="{{ localise "SearchResults" $lang 1 }}"
+        >
           <div class="search__count">
             {{ template "partials/count" . }}
           </div>
@@ -50,26 +65,31 @@
                 {{ template "partials/sort" . }}
               </div>
               {{ if .RSSLink }}
-                <div class="ons-grid__col ons-u-wa--@l ons-u-pt-xxs@l">
-                  {{ template "partials/rss-feed" . }}
-                </div>
+              <div class="ons-grid__col ons-u-wa--@l ons-u-pt-xxs@l">
+                {{ template "partials/rss-feed" . }}
+              </div>
               {{ end }}
             </div>
           </div>
           <div class="search__filter__mobile-filter-toggle hide">
-              <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
-                <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
-              </button>
+            <button
+              id="filter-results"
+              type="button"
+              class="ons-btn ons-btn--secondary"
+              aria-controls="search-filter"
+            >
+              <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
+            </button>
           </div>
-          
+
           <div class="search__results ons-u-bt ons-u-mt-no">
             {{ template "partials/data-aggregation-results" . }}
           </div>
-        
+
           {{ if gt .Data.Response.Count 0 }}
-            <div class="search__pagination">
-              {{ template "partials/search-pagination" . }}
-            </div>
+          <div class="search__pagination">
+            {{ template "partials/search-pagination" . }}
+          </div>
           {{ end }}
         </section>
       </div>
