--- a/assets/templates/previous-releases.tmpl
+++ b/assets/templates/previous-releases.tmpl
@@ -4,6 +4,7 @@
 
     <div class="ons-grid__col ons-col-12@m">
         <section class="search__summary" role="contentinfo"  aria-label="{{ localise "SearchSummary" $lang 4 }}">
+            <div class="ons-u-fs-m ons-u-mt-s ons-u-pb-xxs release__document-type">Previous releases</div>
             <h1 class="ons-u-fs-xxxl">{{ .Metadata.Title }}</h1>
             <p> {{ .Metadata.Description }}</p>
         </section>
