--- a/assets/templates/previous-releases.tmpl
+++ b/assets/templates/previous-releases.tmpl
@@ -12,19 +12,13 @@
 
     <div class="ons-grid__col ons-col-12@m">
         <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang  1 }}">
-          <div class="search__count">
-            {{ template "partials/count" . }}
-          </div>
-          <div class="search__sort">
-            {{ template "partials/sort" . }}
-          </div>
           <div class="search__filter__mobile-filter-toggle hide">
               <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
                 <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
               </button>
           </div>
           <div class="search__results">
-            {{ template "partials/results" . }}
+            {{ template "partials/list" . }}
           </div>
           <div class="search__pagination">
             {{ template "partials/search-pagination" . }}
