add 'latest release' to locales files

--- a/assets/templates/partials/list.tmpl
+++ b/assets/templates/partials/list.tmpl
@@ -44,7 +44,7 @@
                 </li>
                 {{ if .IsLatestRelease }}
                     <li class="ons-document-list__item-attribute">
-                        <span class="ons-u-fw-b">Latest release</span>
+                        <span class="ons-u-fw-b">{{ localise "LatestRelease" $lang 1 }}</span>
                     </li>
                 {{ end }}
                 </ul>
