--- a/assets/templates/previous-releases.tmpl
+++ b/assets/templates/previous-releases.tmpl
@@ -13,7 +13,7 @@
       </div>
 
     <div class="ons-grid__col ons-col-12@m">
-        <section role="contentinfo">
+        <section>
           <div class="search__results">
             {{ template "partials/list" . }}
           </div>
