--- a/assets/templates/partials/list.tmpl
+++ b/assets/templates/partials/list.tmpl
@@ -3,6 +3,7 @@
 {{ $itemsPerPage := .Data.Pagination.Limit }}
 {{ $totalSearchPosition := multiply (subtract $currentPage 1) $itemsPerPage }}
 {{ $response := .Data.Response }}
+{{ $pageType := .Type }}
 
 <div id="results">
     <div id="results-loading" class="ons-panel ons-panel--info ons-panel--no-title hide">
@@ -37,9 +38,15 @@
                             <span class="ons-u-fw-b">{{ localise "ReleasedOn" $lang 1 }} </span>
                             <time datetime="{{ dateFormatYYYYMMDDHyphenated .Description.ReleaseDate }}">{{ dateFormat .Description.ReleaseDate }}</time>
                         </li>
-                        {{ if .IsLatestRelease }}
+                        {{ if eq $pageType "previous-releases" }}
+                            {{ if .IsLatestRelease }}
+                                <li class="ons-document-list__item-attribute">
+                                    <span class="ons-u-fw-b">{{ localise "LatestRelease" $lang 1 }} </span>
+                                </li>
+                            {{ end }}
+                        {{ else }}
                             <li class="ons-document-list__item-attribute">
-                                <span class="ons-u-fw-b">{{ localise "LatestRelease" $lang 1 }}</span>
+                                <span class="ons-u-fw-b"> {{ localise .Type.LocaliseKeyName $lang 1 }} </span>
                             </li>
                         {{ end }}
                     </ul>
