--- a/assets/templates/partials/related-list-pages-title.tmpl
+++ b/assets/templates/partials/related-list-pages-title.tmpl
@@ -6,5 +6,5 @@
     <h1 class="ons-u-fs-xxxl">{{ .Title.Title }} {{ localise $firstResultTypeLocalKey $lang 4 }}</h1>
 {{ end }}
 {{ if eq .Type "related-data" }}
-    <h1 class="ons-u-fs-xxxl">{{ .Title.Title }}</h1>
+    <h1 class="ons-u-fs-xxxl">{{ localise "AllDataRelatedTo" $lang 1 }} {{ .Title.Title }}</h1>
 {{ end }}
