add id for component testing

--- a/assets/templates/partials/list.tmpl
+++ b/assets/templates/partials/list.tmpl
@@ -57,6 +57,6 @@
             {{ end }}
         </ul>
     {{ else }}
-        <p>{{ localise "NoResultsHeader" $lang 1 }}</p>
+        <p id="no-results-text">{{ localise "NoResultsHeader" $lang 1 }}</p>
     {{ end }}
 </div>
