--- a/assets/templates/search.tmpl
+++ b/assets/templates/search.tmpl
@@ -29,48 +29,55 @@
       </div>
 
     {{else}}
+      <form id="filterForm" method="get" class="js-auto-submit__form">
+        <div class="ons-grid__col ons-col-12@m">
+          <section class="search__summary" role="contentinfo"  aria-label="{{ localise "SearchSummary" $lang 4 }}">
+            {{ template "partials/summary" . }}
+          </section>
+        </div>
 
-      <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary" role="contentinfo"  aria-label="{{ localise "SearchSummary" $lang 4 }}">
-          {{ template "partials/summary" . }}
-        </section>
-      </div>
+        <div class="ons-grid__col ons-col-4@m">
+          <section class="search__filter" role="contentinfo" aria-label="{{ localise "SearchFiltering" $lang 4 }}" id="search-filter">
+            <div class="search__filter__heading">
+              <h3 class="font-size--18">
+                {{ localise "Filter" $lang 4 }} {{ localise .Data.TermLocalKey $lang 4 }}
+              </h3>
+              <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
+            </div>
+            <div class="search__filter__content ons-u-bb">
+              {{ template "partials/filter" . }}
+            </div>
+            <button
+              type="submit"
+              class="ons-btn ons-u-mt-l ons-u-mb-l text-wrap"
+            >
+              <span class="ons-btn__inner">{{ localise "ApplyFilters" .Language 1 }}</span>
+            </button>
+          </section>
+        </div>
 
-      <div class="ons-grid__col ons-col-4@m">
-        <section class="search__filter" role="contentinfo" aria-label="{{ localise "SearchFiltering" $lang 4 }}" id="search-filter">
-          <div class="search__filter__heading">
-            <h3 class="font-size--18">
-              {{ localise "Filter" $lang 4 }} {{ localise .Data.TermLocalKey $lang 4 }}
-            </h3>
-            <a href="?{{ if .Data.Query }}q={{ .Data.Query}}{{end}}" id="clear-search" class="float-right font-size--18">{{ localise "ClearAll" $lang 1 }}</a>
-          </div>
-          <div class="search__filter__content">
-            {{ template "partials/filter" . }}
-          </div>
-        </section>
-      </div>
-
-      <div class="ons-grid__col ons-col-8@m" aria-live="polite">
-        <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang  1 }}">
-          <div class="search__count">
-            {{ template "partials/count" . }}
-          </div>
-          <div class="search__sort">
-            {{ template "partials/sort" . }}
-          </div>
-          <div class="search__filter__mobile-filter-toggle hide">
-              <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
-                <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
-              </button>
-          </div>
-          <div class="search__results">
-            {{ template "partials/results" . }}
-          </div>
-          <div class="search__pagination">
-            {{ template "partials/search-pagination" . }}
-          </div>
-        </section>
-      </div>
+        <div class="ons-grid__col ons-col-8@m" aria-live="polite">
+          <section role="contentinfo" aria-label="{{ localise "SearchResults" $lang  1 }}">
+            <div class="search__count">
+              {{ template "partials/count" . }}
+            </div>
+            <div class="search__sort">
+              {{ template "partials/sort" . }}
+            </div>
+            <div class="search__filter__mobile-filter-toggle hide">
+                <button id="filter-results" type="button" class="ons-btn ons-btn--secondary" aria-controls="search-filter">
+                  <span class="ons-btn__inner">{{ localise "FilterResults" $lang 4 }}</span>
+                </button>
+            </div>
+            <div class="search__results">
+              {{ template "partials/results" . }}
+            </div>
+            <div class="search__pagination">
+              {{ template "partials/search-pagination" . }}
+            </div>
+          </section>
+        </div>
+      </form>
     {{end}}
 
   </div>
