Remove sort padding

--- a/assets/templates/partials/sort.tmpl
+++ b/assets/templates/partials/sort.tmpl
@@ -1,6 +1,6 @@
 {{ $lang := .Language }}
 
-<div class="ons-grid ons-grid--flex@m ons-u-pb-s">
+<div class="ons-grid ons-grid--flex@m">
   <div class="ons-grid__col ons-u-wa--">
     <div class="ons-field--inline">
       <label
