Add margin to agg sort

--- a/assets/templates/data-aggregation-page.tmpl
+++ b/assets/templates/data-aggregation-page.tmpl
@@ -59,7 +59,7 @@
           <div class="search__count">
             {{ template "partials/count" . }}
           </div>
-          <div class="ons-grid ons-u-mt-s">
+          <div class="ons-grid ons-u-mt-s ons-u-mb-s">
             <div class="ons-pl-grid ons-grid--flex@l ons-grid--between@l ">
               <div class="ons-grid__col ons-u-wa--@l">
                 {{ template "partials/sort" . }}
