1999 update template to handle validation error messaging

--- a/assets/templates/related-list-pages.tmpl
+++ b/assets/templates/related-list-pages.tmpl
@@ -1,27 +1,31 @@
-{{ $lang := .Language }}
 <div class="ons-container search__container">
   <div class="ons-grid">
-
     <div class="ons-grid__col ons-col-12@m">
-        <section class="search__summary" role="contentinfo">
-            {{ template "partials/type-label" . }}
-            {{ template "partials/related-list-pages-title" . }}
-            <p> {{ .Metadata.Description }}</p>
+      {{ if gt (len .Error.ErrorItems) 0 }}
+        <div class="ons-u-mb-l">
+          {{ template "partials/error-summary" .Error }}
+        </div>
+      {{ else }}
+        <section
+          class="search__summary"
+          role="contentinfo"
+        >
+          {{ template "partials/type-label" . }}
+          {{ template "partials/related-list-pages-title" . }}
+          <p>{{ .Metadata.Description }}</p>
         </section>
-      </div>
 
-    <div class="ons-grid__col ons-col-12@m">
         <section>
           <div class="search__results">
             {{ template "partials/list" . }}
           </div>
           <div class="search__pagination">
-            {{ if (gt .Count 0)}}
-                {{ template "partials/search-pagination" . }}
+            {{ if gt .Count 0 }}
+              {{ template "partials/search-pagination" . }}
             {{ end }}
           </div>
         </section>
-      </div>
-
+      {{ end }}
+    </div>
   </div>
 </div>
