2092 add missing summary for /relateddata pages

--- a/assets/templates/partials/list.tmpl
+++ b/assets/templates/partials/list.tmpl
@@ -52,6 +52,9 @@
                             {{ end }}
                         </ul>
                     </div>
+                    {{ if eq $.Type "related-data" }}
+                        <div class="ons-document-list__item-description">{{ .Description.Summary }}</div>
+                    {{ end }}
                 </div>
             </li>
             {{ end }}
