convert div to p tag

--- a/assets/templates/partials/list.tmpl
+++ b/assets/templates/partials/list.tmpl
@@ -53,7 +53,7 @@
                         </ul>
                     </div>
                     {{ if eq $.Type "related-data" }}
-                        <div class="ons-document-list__item-description">{{ .Description.Summary }}</div>
+                        <p class="ons-document-list__item-description">{{ .Description.Summary }}</p>
                     {{ end }}
                 </div>
             </li>
